<?xml version="1.0" encoding="UTF-8"?>
<!--
  Copyright 2017-2019, Schlumberger

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.opengroup.osdu</groupId>
	<artifactId>os-storage-testing</artifactId>
	<version>0.30.0-SNAPSHOT</version>
	<description>Root Storage Service project</description>
	<packaging>pom</packaging>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<modules>
		<module>storage-test-core</module>
		<module>storage-test-aws</module>
		<module>storage-test-azure</module>
		<module>storage-test-gc</module>
		<module>storage-test-ibm</module>
		<module>storage-test-baremetal</module>
	</modules>

	<properties>
        <maven.compiler.release>17</maven.compiler.release>
		<os-core-common.version>6.0.0</os-core-common.version>
		<log4j.version>2.23.0</log4j.version>
		<jackson.version>2.21.1</jackson.version>
		<jackson-databind.version>2.21.1</jackson-databind.version>
		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
		<argLine>
			--add-opens java.base/java.lang=ALL-UNNAMED
		</argLine>
	</properties>

	<repositories>
		<repository>
			<id>${repo.releases.id}</id>
			<url>${repo.releases.url}</url>
		</repository>
	</repositories>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>2.9.1</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-api</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.logging.log4j</groupId>
				<artifactId>log4j-to-slf4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<repository>
			<id>${publish.releases.id}</id>
			<url>${publish.releases.url}</url>
		</repository>
		<snapshotRepository>
			<id>${publish.snapshots.id}</id>
			<url>${publish.snapshots.url}</url>
		</snapshotRepository>
	</distributionManagement>

	<profiles>
		<profile>
			<id>Default</id>
			<activation>
				<property>
					<name>!repo.releases.id</name>
				</property>
			</activation>
			<properties>
				<repo.releases.id>community-maven-repo</repo.releases.id>
				<publish.snapshots.id>community-maven-via-job-token</publish.snapshots.id>
				<publish.releases.id>community-maven-via-job-token</publish.releases.id>
				<repo.releases.url>https://community.opengroup.org/api/v4/groups/17/-/packages/maven</repo.releases.url>
				<publish.snapshots.url>https://community.opengroup.org/api/v4/projects/44/packages/maven</publish.snapshots.url>
				<publish.releases.url>https://community.opengroup.org/api/v4/projects/44/packages/maven</publish.releases.url>
			</properties>
		</profile>
	</profiles>

</project>
